all changes has been made

--- a/.env
+++ b/.env
@@ -1,12 +1,8 @@
 PORT = 5000
-DB_HOST = mongodb://localhost:27017/ProjectLogin
+DB_HOST = mongodb://localhost:27017/practice
 
 
 
 SALT = SomeRandomString
 
 ENC_KEY = vOVH6sdmpNWjRRIqCc7rdxs01lwHzfr3
-
-TWILIO_SERVICE_ID = YOUR_SERVICE_ID
-TWILIO_ACCOUNT_SID = YOUR_ACCOUNT_SID
-TWILIO_AUTH_TOKEN = YOUR_AUTH_TOKEN
