--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.0",
-    "morgan": "^1.10.0",
-    "twilio": "^3.65.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
